{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 44,
  "lineage": "d812b6a4-ab8f-77b2-d76e-f52e2c8c613e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43b0dac2024f760",
            "arn": "arn:aws:ec2:us-east-1:449663741562:elastic-ip/eipalloc-0b43b0dac2024f760",
            "association_id": "eipassoc-030e9e9c7724384ee",
            "domain": "vpc",
            "id": "eipalloc-0b43b0dac2024f760",
            "network_border_group": "us-east-1",
            "network_interface": "eni-052a02a5071dd8ee1",
            "private_dns": "ip-10-0-1-77.ec2.internal",
            "private_ip": "10.0.1.77",
            "public_dns": "ec2-18-233-144-159.compute-1.amazonaws.com",
            "public_ip": "18.233.144.159",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudweave-nat-eip-1"
            },
            "tags_all": {
              "Name": "cloudweave-nat-eip-1"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b193dd1cb8525d2",
            "arn": "arn:aws:ec2:us-east-1:449663741562:elastic-ip/eipalloc-03b193dd1cb8525d2",
            "association_id": "eipassoc-01d16f158ddbd603d",
            "domain": "vpc",
            "id": "eipalloc-03b193dd1cb8525d2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0cf75b67068b566ea",
            "private_dns": "ip-10-0-2-17.ec2.internal",
            "private_ip": "10.0.2.17",
            "public_dns": "ec2-107-22-239-105.compute-1.amazonaws.com",
            "public_ip": "107.22.239.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cloudweave-nat-eip-2"
            },
            "tags_all": {
              "Name": "cloudweave-nat-eip-2"
            },
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:internet-gateway/igw-0cc474cfbb16b4cf6",
            "id": "igw-0cc474cfbb16b4cf6",
            "owner_id": "449663741562",
            "tags": {
              "Name": "cloudweave-igw"
            },
            "tags_all": {
              "Name": "cloudweave-igw"
            },
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:loadbalancer/app/cloudweave-alb/30d03452596a6e6c",
            "arn_suffix": "app/cloudweave-alb/30d03452596a6e6c",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "cloudweave-alb-319481151.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:449663741562:loadbalancer/app/cloudweave-alb/30d03452596a6e6c",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cloudweave-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-026f84b24173519ad"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0ce3ce96d51e591ec"
              },
              {
                "subnet_id": "subnet-0e058c207767b6c48"
              }
            ],
            "subnets": [
              "subnet-0ce3ce96d51e591ec",
              "subnet-0e058c207767b6c48"
            ],
            "tags": {
              "Name": "cloudweave-alb"
            },
            "tags_all": {
              "Name": "cloudweave-alb"
            },
            "vpc_id": "vpc-0c1929889a654f205",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:listener/app/cloudweave-alb/30d03452596a6e6c/20d8755ce0cd3779",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-frontend-tg/ca614c0fb760ad7e",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:449663741562:listener/app/cloudweave-alb/30d03452596a6e6c/20d8755ce0cd3779",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:loadbalancer/app/cloudweave-alb/30d03452596a6e6c",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "backend_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-backend-tg/b83a7e7e87de9c64",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:listener-rule/app/cloudweave-alb/30d03452596a6e6c/20d8755ce0cd3779/b4fe1a1534d7cc2d",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/api/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:449663741562:listener-rule/app/cloudweave-alb/30d03452596a6e6c/20d8755ce0cd3779/b4fe1a1534d7cc2d",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:listener/app/cloudweave-alb/30d03452596a6e6c/20d8755ce0cd3779",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_listener.frontend",
            "aws_lb_target_group.backend",
            "aws_lb_target_group.frontend",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-backend-tg/b83a7e7e87de9c64",
            "arn_suffix": "targetgroup/cloudweave-backend-tg/b83a7e7e87de9c64",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/v1/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-backend-tg/b83a7e7e87de9c64",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:449663741562:loadbalancer/app/cloudweave-alb/30d03452596a6e6c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudweave-backend-tg",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloudweave-backend-tg"
            },
            "tags_all": {
              "Name": "cloudweave-backend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-frontend-tg/ca614c0fb760ad7e",
            "arn_suffix": "targetgroup/cloudweave-frontend-tg/ca614c0fb760ad7e",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:449663741562:targetgroup/cloudweave-frontend-tg/ca614c0fb760ad7e",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:449663741562:loadbalancer/app/cloudweave-alb/30d03452596a6e6c"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cloudweave-frontend-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cloudweave-frontend-tg"
            },
            "tags_all": {
              "Name": "cloudweave-frontend-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0b43b0dac2024f760",
            "association_id": "eipassoc-030e9e9c7724384ee",
            "connectivity_type": "public",
            "id": "nat-0b67bf4be571ab1a0",
            "network_interface_id": "eni-052a02a5071dd8ee1",
            "private_ip": "10.0.1.77",
            "public_ip": "18.233.144.159",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0ce3ce96d51e591ec",
            "tags": {
              "Name": "cloudweave-nat-1"
            },
            "tags_all": {
              "Name": "cloudweave-nat-1"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03b193dd1cb8525d2",
            "association_id": "eipassoc-01d16f158ddbd603d",
            "connectivity_type": "public",
            "id": "nat-08d214b365ad8c098",
            "network_interface_id": "eni-0cf75b67068b566ea",
            "private_ip": "10.0.2.17",
            "public_ip": "107.22.239.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0e058c207767b6c48",
            "tags": {
              "Name": "cloudweave-nat-2"
            },
            "tags_all": {
              "Name": "cloudweave-nat-2"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:route-table/rtb-0aa94f70148675853",
            "id": "rtb-0aa94f70148675853",
            "owner_id": "449663741562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0b67bf4be571ab1a0",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudweave-private-rt-1"
            },
            "tags_all": {
              "Name": "cloudweave-private-rt-1"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:route-table/rtb-0a7e22c5712cffd64",
            "id": "rtb-0a7e22c5712cffd64",
            "owner_id": "449663741562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08d214b365ad8c098",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudweave-private-rt-2"
            },
            "tags_all": {
              "Name": "cloudweave-private-rt-2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:route-table/rtb-04f3e8224b549385c",
            "id": "rtb-04f3e8224b549385c",
            "owner_id": "449663741562",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cc474cfbb16b4cf6",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cloudweave-public-rt"
            },
            "tags_all": {
              "Name": "cloudweave-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bd8353e60df1dc3a",
            "route_table_id": "rtb-0aa94f70148675853",
            "subnet_id": "subnet-0bf3bb65d91244455"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1aada3b9726cf21",
            "route_table_id": "rtb-0a7e22c5712cffd64",
            "subnet_id": "subnet-02f5d775d44d9981a"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e1a5ba9f44ed1079",
            "route_table_id": "rtb-04f3e8224b549385c",
            "subnet_id": "subnet-0ce3ce96d51e591ec"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c5e6ee57972d7436",
            "route_table_id": "rtb-04f3e8224b549385c",
            "subnet_id": "subnet-0e058c207767b6c48"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:security-group/sg-026f84b24173519ad",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-026f84b24173519ad",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudweave-alb-20250802224634567600000002",
            "name_prefix": "cloudweave-alb-",
            "owner_id": "449663741562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudweave-alb-sg"
            },
            "tags_all": {
              "Name": "cloudweave-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:security-group/sg-089bd320bd40d356d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-089bd320bd40d356d",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3001,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026f84b24173519ad",
                  "sg-0faa73742b2fcddd1"
                ],
                "self": false,
                "to_port": 3001
              }
            ],
            "name": "cloudweave-backend-20250802224640371500000005",
            "name_prefix": "cloudweave-backend-",
            "owner_id": "449663741562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudweave-backend-sg"
            },
            "tags_all": {
              "Name": "cloudweave-backend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "frontend",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:security-group/sg-0faa73742b2fcddd1",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0faa73742b2fcddd1",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-026f84b24173519ad"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cloudweave-frontend-20250802224637743300000004",
            "name_prefix": "cloudweave-frontend-",
            "owner_id": "449663741562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudweave-frontend-sg"
            },
            "tags_all": {
              "Name": "cloudweave-frontend-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:security-group/sg-051f917461a656f86",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-051f917461a656f86",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-089bd320bd40d356d"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "cloudweave-rds-20250802224643266200000006",
            "name_prefix": "cloudweave-rds-",
            "owner_id": "449663741562",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cloudweave-rds-sg"
            },
            "tags_all": {
              "Name": "cloudweave-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.backend",
            "aws_security_group.frontend",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:subnet/subnet-0bf3bb65d91244455",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bf3bb65d91244455",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449663741562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudweave-private-subnet-1"
            },
            "tags_all": {
              "Name": "cloudweave-private-subnet-1"
            },
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:subnet/subnet-02f5d775d44d9981a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-02f5d775d44d9981a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "449663741562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudweave-private-subnet-2"
            },
            "tags_all": {
              "Name": "cloudweave-private-subnet-2"
            },
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:subnet/subnet-0ce3ce96d51e591ec",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ce3ce96d51e591ec",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "449663741562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudweave-public-subnet-1"
            },
            "tags_all": {
              "Name": "cloudweave-public-subnet-1"
            },
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:subnet/subnet-0e058c207767b6c48",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e058c207767b6c48",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "449663741562",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cloudweave-public-subnet-2"
            },
            "tags_all": {
              "Name": "cloudweave-public-subnet-2"
            },
            "vpc_id": "vpc-0c1929889a654f205"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:449663741562:vpc/vpc-0c1929889a654f205",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01c0050881628f77f",
            "default_route_table_id": "rtb-0b576a6d218375227",
            "default_security_group_id": "sg-0e825a5364462561b",
            "dhcp_options_id": "dopt-9d9798e7",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1929889a654f205",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b576a6d218375227",
            "owner_id": "449663741562",
            "tags": {
              "Name": "cloudweave-vpc"
            },
            "tags_all": {
              "Name": "cloudweave-vpc"
            }
          }
        }
      ]
    }
  ]
}